--- a/yaml/Openclash-Smart-New.yaml
+++ b/yaml/Openclash-Smart-New.yaml
@@ -9,15 +9,8 @@
 
 # 机场订阅
 proxy-providers:
-  聚合机场-A:
-    url: "机场订阅链接、或sub-store聚合后的订阅链接"
-    type: http
-    interval: 86400
-    health-check:
-      enable: true
-      url: https://www.gstatic.com/generate_204
-      interval: 300
-    proxy: 直连
+  机场A: {<<: *PProviders, url: '机场订阅地址1', override: {additional-prefix: '[机场A] '}}
+  机场B: {<<: *PProviders, url: '机场订阅地址2', override: {additional-prefix: '[机场B] '}}
 # 多机场复制上方内容后改名字和url订阅链接即可,不能重复名字。
 
 # 节点信息
@@ -61,8 +54,18 @@ dns:
   ipv6: true
   enhanced-mode: fake-ip
   fake-ip-range: 198.20.0.1/16
+  default-nameserver:
+    - 202.103.24.68
+    - 202.103.44.150
+  proxy-server-nameserver:
+    - quic://dns.alidns.com/dns-query
+    - https://sm2.doh.pub/dns-query 
+  direct-nameserver:
+    - quic://dns.alidns.com/dns-query
+    - https://sm2.doh.pub/dns-query
   nameserver:
-    - 223.5.5.5
+    - https://dns.google/dns-query
+    - https://dns.cloudflare.com/dns-query
   fake-ip-filter:
     - +.qeayr.cn
     - +.saojc.xyz   
