--- a/yaml/Openclash-Smart-New.yaml
+++ b/yaml/Openclash-Smart-New.yaml
@@ -9,9 +9,24 @@
 
 # 机场订阅
 proxy-providers:
-  机场A: {<<: *PProviders, url: '机场订阅地址1', override: {additional-prefix: '[机场A] '}}
-  机场B: {<<: *PProviders, url: '机场订阅地址2', override: {additional-prefix: '[机场B] '}}
-# 多机场复制上方内容后改名字和url订阅链接即可,不能重复名字。
+  机场A:
+    url: "机场订阅地址1"
+    type: http
+    interval: 86400
+    health-check:
+      enable: true
+      url: https://www.gstatic.com/generate_204
+      interval: 300
+    proxy: 直连
+  机场B:
+    url: "机场订阅地址2"
+    type: http
+    interval: 86400
+    health-check:
+      enable: true
+      url: https://www.gstatic.com/generate_204
+      interval: 300
+    proxy: 直连
 
 # 节点信息
 proxies:
