--- a/yaml/Openclash-Smart-New.yaml
+++ b/yaml/Openclash-Smart-New.yaml
@@ -27,6 +27,15 @@ proxy-providers:
       url: https://www.gstatic.com/generate_204
       interval: 300
     proxy: 直连
+  机场C:
+    url: "机场订阅地址3"
+    type: http
+    interval: 86400
+    health-check:
+      enable: true
+      url: https://www.gstatic.com/generate_204
+      interval: 300
+    proxy: 直连
 
 # 节点信息
 proxies:
