--- a/yaml/Openclash-Smart-6.20.yaml
+++ b/yaml/Openclash-Smart-6.20.yaml
@@ -96,7 +96,7 @@ dns:
   ipv6: true
   enhanced-mode: fake-ip
   fake-ip-range: 198.20.0.1/16
-  nameserver:
+  default-nameserver:
     - 223.5.5.5
     - 119.29.29.29
   proxy-server-nameserver:
