--- a/yaml/Openclash-Smart-6.20.yaml
+++ b/yaml/Openclash-Smart-6.20.yaml
@@ -94,6 +94,8 @@ dns:
   enable: true
   listen: 0.0.0.0:7874
   ipv6: true
+  prefer-h3: false # 是否开启 DoH 支持 HTTP/3，将并发尝试
+  respect-rules: true
   enhanced-mode: fake-ip
   fake-ip-range: 198.20.0.1/16
   default-nameserver:
