--- a/yaml/Openclash-Smart-6.20.yaml
+++ b/yaml/Openclash-Smart-6.20.yaml
@@ -20,6 +20,8 @@ proxy-providers:
       url: https://www.gstatic.com/generate_204
       interval: 300
     proxy: 直连
+    override:
+      additional-prefix: "[自建] " # 给此机场机场-B的节点头部加名字，引号内名字可以改。
 
   Airport_01:
     url: "订阅链接1"
